--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body style='background-color:#4857fa'>
     <center>
-          <embed src="/plantbattle/pvz_9_15.swf" width="600x" height="450px">
+          <embed src="/ltf2/l2f.swf" width="600x" height="450px">
     </center>
   </body>
 </html>
